--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="#"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/canavarrosadv" target="_blank"><i class="fa fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/dariuscanavarros" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href="#contact"><i class="fa fa-envelope"></i></i>
+                <a href="mailto:joaotei7@hotmail.com"><i class="fa fa-envelope"></i></i>
                 </a>
             </li>
         </ul>
@@ -334,40 +334,38 @@
             <div class="col tab-full">
 
                 <h1>Contact</h>
-
-                    <form>
+                    <!--                     <form id="contact-form">
                         <div>
                             <label for="sampleInput">Your email</label>
-                            <input class="full-width" type="email" placeholder="test@mailbox.com" id="sampleInput">
+                            <input class="full-width" type="email" placeholder="test@mailbox.com" id="sampleInput" name="user_email" required>
                         </div>
                         <div>
                             <label for="sampleRecipientInput">Reason for contacting</label>
                             <div class="ss-custom-select">
-                                <select class="full-width" id="sampleRecipientInput">
-				        		<option value="Option 1">Questions</option>
-				        		<option value="Option 2">Report</option>
-				        		<option value="Option 3">Others</option>
-				        	</select>
+                                <select class="full-width" id="sampleRecipientInput" name="contact_reason">
+                                    <option value="Questions">Questions</option>
+                                    <option value="Report">Report</option>
+                                    <option value="Others">Others</option>
+                                </select>
                             </div>
                         </div>
-
-                        <label for="exampleMessage">Message</label>
-                        <textarea class="full-width" placeholder="Your message" id="exampleMessage"></textarea>
-
-                        <label class="add-bottom">
-			        	<input type="checkbox">			            
-			        	<span class="label-text">Send a copy to yourself</span>
-			     	</label>
-
+                        <div>
+                            <label for="exampleMessage">Message</label>
+                            <textarea class="full-width" placeholder="Your message" id="exampleMessage" name="message" required></textarea>
+                        </div>
+                        <div>
+                            <label class="add-bottom">
+                                <input type="checkbox" id="sendCopy" name="send_copy">			            
+                                <span class="label-text">Send a copy to yourself</span>
+                            </label>
+                        </div>
                         <input class="button-primary" type="submit" value="Submit">
-
-                    </form>
+                    </form> -->
             </div>
         </div>
-
     </section>
-    <!-- footer
-    ================================================== -->
+
+    <!-- footer ================================================== -->
     <footer>
 
         <div class="footer-main">
@@ -401,7 +399,8 @@
                     <p>
                         Av. Filinto Muller, n. 35,<br> Ed. Sarat, Sala 27,<br> Bairro Jardim Cuiabá, Cuiabá - MT <br> 78043-400 <br>
                     </p>
-
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61493.2280064026!2d-56.12416741348653!3d-15.574181518988745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939db1efe3869ff3%3A0xcb8d59681ee229da!2sEdif%C3%ADcio%20Sarat!5e0!3m2!1spt-BR!2sbr!4v1715955661210!5m2!1spt-BR!2sbr"
+                        width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <p>
                         darius@canavarros.com.br<br> Telefone: +55 (65) 99972-5131
                     </p>
@@ -432,13 +431,9 @@
                     <div class="subscribe-form">
 
                         <form id="mc-form" class="group" novalidate="true">
-
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-
+                            <input type="email" value="" name="email" class="email" id="mc-email" placeholder="Email Address" required="">
                             <input type="submit" name="subscribe" value="Send">
-
                             <label for="mc-email" class="subscribe-message"></label>
-
                         </form>
 
                     </div>
@@ -479,6 +474,7 @@
 
     <!-- Java Script
     ================================================== -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
