--- a/index.html
+++ b/index.html
@@ -234,19 +234,19 @@
             <div class="col-eight">
 
                 <ul class="lead aos-init aos-animate listPerfil" data-aos="fade-up">
-                    <li>Graduado em Direito pela Universidade Federal de Uberlândia UFU (2000);</li>
-                    <li>Pós-Graduado em Direito Tributário pela PUC/Campinas (2002);</li>
-                    <li>Pós-Graduado em Planejamento Tributário pela FGV/SP (2009);</li>
-                    <li>Professor Direito Tributário na UNIC, UNIVAG, ESUD, SEFAZ/MT e SAD (2003/2009);</li>
-                    <li>Palestrante no I Congresso Luso Brasileiro em Lisboa/Portugal (2019);</li>
-                    <li>Curso de Recuperação Judicial de Empresas no Direito Comparado: EUA, França e Brasil, na California Western School of Law, San Diego/EUA, 2017;</li>
-                    <li>Curso Direito Comparado na Universidade de Sorbonne, Paris (2019);</li>
-                    <li>Conselheiro do Conselho de Contribuintes da SEFAZ/MT (2010/2012);</li>
-                    <li>Conselheiro do Conselho de Recursos Fiscais da Prefeitura de Cuiabá-MT (2014/2015);</li>
-                    <li>Diretor Regional do Instituto Brasileiro de Planejamento Tributário - IBPT (2005/2015);</li>
-                    <li>Presidente da Comissão de Direito Tributário da OAB/MT (2009/2015);</li>
-                    <li>Membro Consultor da Comissão Especial de Direito Tributário do Conselho Federal da OAB em Brasília (2013/2023);</li>
-                    <li>Co-autor do Livro “Os 30 anos do Sistema Tributário na Constituição Federal”; CFOAB, 2018;</li>
+                    <li data-aos="fade-up">Graduado em Direito pela Universidade Federal de Uberlândia UFU (2000);</li>
+                    <li data-aos="fade-up">Pós-Graduado em Direito Tributário pela PUC/Campinas (2002);</li>
+                    <li data-aos="fade-up">Pós-Graduado em Planejamento Tributário pela FGV/SP (2009);</li>
+                    <li data-aos="fade-up">Professor Direito Tributário na UNIC, UNIVAG, ESUD, SEFAZ/MT e SAD (2003/2009);</li>
+                    <li data-aos="fade-up">Palestrante no I Congresso Luso Brasileiro em Lisboa/Portugal (2019);</li>
+                    <li data-aos="fade-up">Curso de Recuperação Judicial de Empresas no Direito Comparado: EUA, França e Brasil, na California Western School of Law, San Diego/EUA, 2017;</li>
+                    <li data-aos="fade-up">Curso Direito Comparado na Universidade de Sorbonne, Paris (2019);</li>
+                    <li data-aos="fade-up">Conselheiro do Conselho de Contribuintes da SEFAZ/MT (2010/2012);</li>
+                    <li data-aos="fade-up">Conselheiro do Conselho de Recursos Fiscais da Prefeitura de Cuiabá-MT (2014/2015);</li>
+                    <li data-aos="fade-up">Diretor Regional do Instituto Brasileiro de Planejamento Tributário - IBPT (2005/2015);</li>
+                    <li data-aos="fade-up">Presidente da Comissão de Direito Tributário da OAB/MT (2009/2015);</li>
+                    <li data-aos="fade-up">Membro Consultor da Comissão Especial de Direito Tributário do Conselho Federal da OAB em Brasília (2013/2023);</li>
+                    <li data-aos="fade-up">Co-autor do Livro “Os 30 anos do Sistema Tributário na Constituição Federal”; CFOAB, 2018;</li>
                 </ul>
             </div>
 
