--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
 
             <div class="row contents">
                 <div class="home-content-left">
-
-                    <h3 data-aos="fade-up">Atuação Nacional em</h3>
-
                     <h1 data-aos="fade-up">
                         Direito Tributário
                     </h1>
@@ -98,7 +95,7 @@
                 <a href="https://www.facebook.com/canavarrosadv" target="_blank"><i class="fa fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/dariuscanavarros" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/canavarrosadv/" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
                 <a class="smoothscroll" href="#contact"><i class="fa fa-envelope"></i></i>
@@ -109,7 +106,7 @@
 
         <div class="home-scrolldown">
             <a href="#about" class="scroll-icon smoothscroll">
-                <span>Scroll Down</span>
+                <span>Rolar para Baixo</span>
                 <i class="icon-arrow-right" aria-hidden="true"></i>
             </a>
         </div>
@@ -127,29 +124,29 @@
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
-                    <span><strong>Advogado Tributária</strong></span><br>
+                    <span><strong>Advogado Tributarista</strong></span><br>
                     <span><strong>OAB/MT 7178-B</strong></span>
                 </div>
             </div>
             <div class="col-eight">
                 <p class="lead" data-aos="fade-up">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestiae unde sint quibusdam adipisci, nihil dolore molestias temporibus voluptatum autem iure ex consequatur tempora sapiente. Fugiat nobis laudantium ex ipsum. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Hic molestiae unde sint quibusdam adipisci, nihil dolore molestias temporibus voluptatum autem iure ex consequatur tempora sapiente. Fugiat nobis laudantium ex ipsum. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Hic molestiae unde sint quibusdam adipisci, nihil dolore molestias temporibus voluptatum autem iure ex consequatur tempora sapiente. Fugiat nobis laudantium ex ipsum. Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Hic molestiae unde sint quibusdam adipisci, nihil dolore molestias temporibus voluptatum autem iure ex consequatur tempora sapiente. Fugiat nobis laudantium ex ipsum.
+                    Advogado com mais de 20 anos de dedicação ao Direito Tributário. Minha trajetória profissional é marcada pela busca das melhores soluções para meus clientes, através de parcerias profissionais que valorizam cada caso concreto. <br>Ao
+                    longo da minha carreira, tive a oportunidade de trabalhar em grandes casos por todo o Brasil, conquistando resultados significativos. Minha principal missão é combater os abusos do Fisco, protegendo os direitos dos meus clientes com
+                    firmeza e excelência. <br>A justiça fiscal é a causa que me impulsiona e orienta meu trabalho diário. Cada desafio enfrentado é uma oportunidade para reafirmar meu compromisso com a equidade e a justiça tributária, garantindo que meus
+                    clientes recebam a melhor defesa possível em todas as instâncias.
 
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
+                <div data-aos="fade-up" class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
                     <h5 class="font-weight-600 no-margin timer alt-font appear contagem plus-sign" data-speed="2000" data-to="40">20</h5>
                     <span class="display-block margin-three-bottom ">Anos de experiência</span>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
+                <div data-aos="fade-up" class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
                     <h5 class="font-weight-600 no-margin timer alt-font appear contagem plus-sign" data-speed="2000" data-to="40">458</h5>
                     <span class="display-block margin-three-bottom">Casos Vencidos</span>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
+                <div data-aos="fade-up" class="col-md-3 col-sm-6 col-xs-6 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-30px-bottom text-center wow fadeInDown">
                     <h5 class="font-weight-600 no-margin timer alt-font appear contagem plus-sign" data-speed="2000" data-to="40">600</h5>
                     <span class="display-block margin-three-bottom">Clientes</span>
                 </div>
@@ -227,7 +224,7 @@
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgProfissional" src="images/pic3.jpg" srcset="images/pic3.jpg 1x, images/pic3.jpg 2x" data-aos="fade-up">
-                    <span><strong>Advogado Tributária</strong></span><br>
+                    <span><strong>Advogado Tributarista</strong></span><br>
                     <span><strong>OAB/MT 7178-B</strong></span>
                 </div>
             </div>
@@ -343,7 +340,7 @@
         <div class="row">
 
             <div class="col tab-full">
-                <h1>Contact</h1>
+                <h1>Contato</h1>
                 <form>
                     <div>
                         <label for="sampleInput">Título do Assunto</label>
@@ -357,8 +354,8 @@
                         <label for="sampleInput">Name</label>
                         <input class="full-width" type="text" placeholder="Name" id="sendername">
                     </div>
-                    <label for="exampleMessage">Message</label>
-                    <textarea class="full-width" placeholder="Your message" id="message"></textarea>
+                    <label for="exampleMessage">Mensagem</label>
+                    <textarea class="full-width" placeholder="Sua Mensagem" id="message"></textarea>
                     </label>
 
                     <input class="button-primary" onclick="sendEmail()" type="submit" value="Submit">
@@ -379,15 +376,15 @@
                     <div class="footer-logo"></div>
 
                     <p style="margin-right: 6rem;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                        Impor limites aos abusos do Fisco, essa é a nossa Causa!
                     </p>
 
                     <ul class="footer-social-list">
                         <li>
-                            <a href="#"><i class="fa fa-facebook-square"></i></a>
+                            <a href="https://www.facebook.com/canavarrosadv" target="_blank"><i class="fa fa-facebook-square"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/canavarrosadv/" target="_blank"><i class="fa fa-instagram"></i></a>
                         </li>
                     </ul>
 
@@ -434,8 +431,8 @@
                     <div class="subscribe-form">
 
                         <form id="mc-form" class="group" novalidate="true">
-                            <input type="email" value="" name="email" class="email" id="mc-email" placeholder="Email Address" required="">
-                            <input type="submit" name="subscribe" value="Send">
+                            <input type="email" value="" name="email" class="email" id="mc-email" placeholder="Endereço de email" required="">
+                            <input type="submit" name="subscribe" value="Enviar">
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
 
@@ -481,7 +478,42 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16481627435"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16481627435');
+    </script>
+    <script>
+        ! function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '969947684542727');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=969947684542727&ev=PageView&noscript=1"
+        /></noscript>
 </body>
 
 </html>
