--- a/index.html
+++ b/index.html
@@ -351,14 +351,14 @@
                         <input class="full-width" type="text" placeholder="Canavarros Palma Advocacia" id="to" disabled value="Canavarros Palma Advocacia">
                     </div>
                     <div>
-                        <label for="sampleInput">Name</label>
-                        <input class="full-width" type="text" placeholder="Name" id="sendername">
+                        <label for="sampleInput">Nome</label>
+                        <input class="full-width" type="text" placeholder="Nome" id="sendername">
                     </div>
                     <label for="exampleMessage">Mensagem</label>
                     <textarea class="full-width" placeholder="Sua Mensagem" id="message"></textarea>
                     </label>
 
-                    <input class="button-primary" onclick="sendEmail()" type="submit" value="Submit">
+                    <input class="button-primary" onclick="sendEmail()" type="submit" value="Enviar">
 
                 </form>
             </div>
