--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
                         <h3>Direito Tributário</h3>
 
-                        <p>O Direito Tributário está cada vez mais inserido nas outras áreas do Direito uma vez que os negócios jurídicos, as relações de trabalho, as mais diversas atividades empresariais – inclusive as realizadas no ambiente virtual.
+                        <p>Suas principais atribuições são a consultoria e o planejamento tributário, que incluem orientação sobre a legislação tributária, desenvolvimento de estratégias para otimização fiscal e garantia de conformidade legal. No contencioso
+                            tributário, os advogados representam as empresas em processos administrativos e judiciais, defendendo contra autuações fiscais e impugnando cobranças indevidas.
                         </p>
 
                     </div>
@@ -181,7 +182,22 @@
                     <div class="service-content">
                         <h3>Processo Judicial Tributário</h3>
 
-                        <p>Existem diversas situações em que se faz necessária a interposição de medida judicial para resguardar o direito do contribuinte, ou mesmo para se defender de uma cobrança já realizada.
+                        <p>O processo judicial tributário é um mecanismo essencial para a defesa dos direitos dos contribuintes diante de possíveis abusos ou interpretações equivocadas da legislação tributária pelas autoridades fiscais. Envolve uma série
+                            de medidas judiciais destinadas a resguardar o direito do contribuinte ou a defendê-lo de cobranças já realizadas.
+                        </p>
+
+
+                    </div>
+
+                </div>
+                <div class="bgrid feature" data-aos="fade-up">
+
+                    <span class="icon"><i class="fa fa-university"  aria-hidden="true"></i></span>
+
+                    <div class="service-content">
+                        <h3>Auditoria fiscal</h3>
+
+                        <p>A auditoria fiscal também é crucial, envolvendo a revisão detalhada de procedimentos fiscais, identificação de créditos tributários e due diligence em operações de fusões e aquisições para avaliar os impactos fiscais.
                         </p>
 
 
@@ -242,8 +258,8 @@
                     <li data-aos="fade-up">Conselheiro do Conselho de Recursos Fiscais da Prefeitura de Cuiabá-MT (2014/2015);</li>
                     <li data-aos="fade-up">Diretor Regional do Instituto Brasileiro de Planejamento Tributário - IBPT (2005/2015);</li>
                     <li data-aos="fade-up">Presidente da Comissão de Direito Tributário da OAB/MT (2009/2015);</li>
-                    <li data-aos="fade-up">Membro Consultor da Comissão Especial de Direito Tributário do Conselho Federal da OAB em Brasília (2013/2023);</li>
                     <li data-aos="fade-up">Co-autor do Livro “Os 30 anos do Sistema Tributário na Constituição Federal”; CFOAB, 2018;</li>
+                    <li data-aos="fade-up">Membro Consultor da Comissão Especial de Direito Tributário do Conselho Federal da OAB em Brasília (2013/2023);</li>
                 </ul>
             </div>
 
@@ -272,7 +288,7 @@
 
                     <div>
                         <p>
-                            Defesas (impugnações e recursos) em processos administrativos tributários Federais, Estaduais e Municipais. Análise de demandas tributárias. Pareceres jurídicos.
+                            Orientação sobre a interpretação e aplicação das leis tributárias. Planejamento tributário para otimização da carga fiscal. Análise de riscos fiscais e compliance.
                         </p>
 
                         <div class="testimonial-author">
@@ -280,13 +296,14 @@
                             <div class="author-info">
                                 Dr Darius
                                 <span>Advogado, Adv. Trib.</span>
+                                <span>Consultoria Tributária</span>
                             </div>
                         </div>
                     </div>
 
                     <div>
                         <p>
-                            Exclusão da multa qualificada e exclusão da responsabilidade tributária do sócio/administrador nos lançamentos tributários contra a empresa.
+                            Representação em processos administrativos e judiciais. Defesa contra autuações fiscais. Elaboração de recursos e impugnações.
                         </p>
 
                         <div class="testimonial-author">
@@ -294,12 +311,13 @@
                             <div class="author-info">
                                 Dr Darius
                                 <span>Advogado, Adv. Trib.</span>
+                                <span>Contencioso Tributário</span>
                             </div>
                         </div>
                     </div>
                     <div>
                         <p>
-                            Clínicas Médicas: a tributação do IRPJ e da CSLL
+                            Due diligence tributária. Estruturação tributária de operações de M&A. Negociação de cláusulas contratuais relacionadas a tributos.
                         </p>
 
                         <div class="testimonial-author">
@@ -307,12 +325,13 @@
                             <div class="author-info">
                                 Dr Darius
                                 <span>Advogado, Adv. Trib.</span>
+                                <span>Assessoria em Fusões e Aquisições</span>
                             </div>
                         </div>
                     </div>
                     <div>
                         <p>
-                            Contribuições Previdenciárias – cobrança indevida
+                            Revisão e auditoria de procedimentos fiscais. Identificação de oportunidades de recuperação de créditos tributários. Avaliação de conformidade com a legislação tributária.
                         </p>
 
                         <div class="testimonial-author">
@@ -320,6 +339,21 @@
                             <div class="author-info">
                                 Dr Darius
                                 <span>Advogado, Adv. Trib.</span>
+                                <span>Auditoria Fiscal</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <p>
+                            Identificação e assessoria na obtenção de incentivos fiscais. Orientação sobre benefícios fiscais para determinados setores e regiões. Planejamento para maximização de benefícios fiscais.
+                        </p>
+
+                        <div class="testimonial-author">
+                            <img src="images/avatars/user-03.jpg" alt="Author image">
+                            <div class="author-info">
+                                Dr Darius
+                                <span>Advogado, Adv. Trib.</span>
+                                <span>Incentivos Fiscais e Benefícios Tributários</span>
                             </div>
                         </div>
                     </div>
