mais alteraçoes de estilo

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                         <h3>Direito Tributário</h3>
 
-                        <p>Suas principais atribuições são a consultoria e o planejamento tributário, que incluem orientação sobre a legislação tributária, desenvolvimento de estratégias para otimização fiscal e garantia de conformidade legal. No contencioso
+                        <p style="text-align: justify;">Suas principais atribuições são a consultoria e o planejamento tributário, que incluem orientação sobre a legislação tributária, desenvolvimento de estratégias para otimização fiscal e garantia de conformidade legal. No contencioso
                             tributário, os advogados representam as empresas em processos administrativos e judiciais, defendendo contra autuações fiscais e impugnando cobranças indevidas.
                         </p>
 
@@ -182,7 +182,7 @@
                     <div class="service-content">
                         <h3>Processo Judicial Tributário</h3>
 
-                        <p>O processo judicial tributário é um mecanismo essencial para a defesa dos direitos dos contribuintes diante de possíveis abusos ou interpretações equivocadas da legislação tributária pelas autoridades fiscais. Envolve uma série
+                        <p style="text-align: justify;">O processo judicial tributário é um mecanismo essencial para a defesa dos direitos dos contribuintes diante de possíveis abusos ou interpretações equivocadas da legislação tributária pelas autoridades fiscais. Envolve uma série
                             de medidas judiciais destinadas a resguardar o direito do contribuinte ou a defendê-lo de cobranças já realizadas.
                         </p>
 
@@ -197,7 +197,7 @@
                     <div class="service-content">
                         <h3>Auditoria fiscal</h3>
 
-                        <p>A auditoria fiscal também é crucial, envolvendo a revisão detalhada de procedimentos fiscais, identificação de créditos tributários e due diligence em operações de fusões e aquisições para avaliar os impactos fiscais.
+                        <p style="text-align: justify;">A auditoria fiscal também é crucial, envolvendo a revisão detalhada de procedimentos fiscais, identificação de créditos tributários e due diligence em operações de fusões e aquisições para avaliar os impactos fiscais.
                         </p>
 
 
@@ -214,7 +214,7 @@
                     <div class="service-content">
                         <h3>Processo Administrativo Tributário</h3>
 
-                        <p>O Processo Administrativo é o melhor meio de discussão de uma demanda tributária, pois suspende de imediato a exigibilidade do crédito tributário, não tem custas judiciais e nem risco de sucumbência, além de ser julgado por órgão
+                        <p style="text-align: justify;">O Processo Administrativo é o melhor meio de discussão de uma demanda tributária, pois suspende de imediato a exigibilidade do crédito tributário, não tem custas judiciais e nem risco de sucumbência, além de ser julgado por órgão
                             especializado exclusivamente em matéria tributária.
                         </p>
 
