--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <div class="home-content">
 
             <div class="row contents">
+                <div class="header-logo-over" data-aos="fade-up">
+                </div>
                 <div class="home-content-left">
                     <h1 data-aos="fade-up">
                         Direito Tributário
                     </h1>
-
                     <div class="buttons" data-aos="fade-up">
                         <a href="#contact" class="smoothscroll button stroke">
                             <span class="icon-circle-down" aria-hidden="true"></span> Contato
