--- a/index.html
+++ b/index.html
@@ -125,17 +125,19 @@
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
-                    <span><strong>Advogado Tributarista</strong></span><br>
-                    <span><strong>OAB/MT 7178-B</strong></span>
+
                 </div>
             </div>
             <div class="col-eight">
-                <p class="lead" data-aos="fade-up">
-                    Advogado com mais de 20 anos de dedicação ao Direito Tributário. Minha trajetória profissional é marcada pela busca das melhores soluções para meus clientes, através de parcerias profissionais que valorizam cada caso concreto. <br>Ao
-                    longo da minha carreira, tive a oportunidade de trabalhar em grandes casos por todo o Brasil, conquistando resultados significativos. Minha principal missão é combater os abusos do Fisco, protegendo os direitos dos meus clientes com
-                    firmeza e excelência. <br>A justiça fiscal é a causa que me impulsiona e orienta meu trabalho diário. Cada desafio enfrentado é uma oportunidade para reafirmar meu compromisso com a equidade e a justiça tributária, garantindo que meus
-                    clientes recebam a melhor defesa possível em todas as instâncias.
-
+                <p class="lead" style="margin-left: 100px;" data-aos="fade-up">
+                    A Canavarros Palma Advocacia é uma empresa com mais de 20 anos de dedicação ao Direito Tributário. Nossa trajetória profissional é marcada pela busca das melhores soluções para nossos clientes, através de parcerias profissionais que valorizam cada caso
+                    concreto.
+                    <br>
+                    <br> Ao longo da nossa carreira, tivemos a oportunidade de trabalhar em grandes casos por todo o Brasil, conquistando resultados significativos. Nossa principal missão é combater os abusos do Fisco, protegendo os direitos dos nossos
+                    clientes com firmeza e excelência.
+                    <br>
+                    <br> A justiça fiscal é a causa que nos impulsiona e orienta nosso trabalho diário. Cada desafio enfrentado é uma oportunidade para reafirmar nosso compromisso com a equidade e a justiça tributária, garantindo que nossos clientes recebam
+                    a melhor defesa possível em todas as instâncias.
                 </p>
             </div>
             <div class="row">
