--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section id="about">
 
         <div class="row about-intro">
-            <h1 class="intro-header" data-aos="fade-up">Sobre Darius Canavarros Palma</h1>
+            <h1 class="intro-header" data-aos="fade-up">Sobre Canavarros Palma Advocacia</h1>
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
