enviado para homologação

--- a/index.html
+++ b/index.html
@@ -122,20 +122,18 @@
 
         <div class="row about-intro">
             <h1 class="intro-header" data-aos="fade-up">Sobre Canavarros Palma Advocacia</h1>
-            <div class="col-four">
+            <div>
                 <div class="col-eight">
                     <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
 
                 </div>
             </div>
-            <div class="col-eight">
-                <p class="lead" style="margin-left: 100px;" data-aos="fade-up">
+            <div>
+                <p class="lead" data-aos="fade-up">
                     A Canavarros Palma Advocacia é uma empresa com mais de 20 anos de dedicação ao Direito Tributário. Nossa trajetória profissional é marcada pela busca das melhores soluções para nossos clientes, através de parcerias profissionais que valorizam cada caso
                     concreto.
-                    <br>
                     <br> Ao longo da nossa carreira, tivemos a oportunidade de trabalhar em grandes casos por todo o Brasil, conquistando resultados significativos. Nossa principal missão é combater os abusos do Fisco, protegendo os direitos dos nossos
                     clientes com firmeza e excelência.
-                    <br>
                     <br> A justiça fiscal é a causa que nos impulsiona e orienta nosso trabalho diário. Cada desafio enfrentado é uma oportunidade para reafirmar nosso compromisso com a equidade e a justiça tributária, garantindo que nossos clientes recebam
                     a melhor defesa possível em todas as instâncias.
                 </p>
