--- a/index.html
+++ b/index.html
@@ -122,13 +122,11 @@
 
         <div class="row about-intro">
             <h1 class="intro-header" data-aos="fade-up">Sobre Canavarros Palma Advocacia</h1>
-            <div>
-                <div class="col-eight">
-                    <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
+            <div class="col-four">
+                <img class="imgSobre" src="images/pic1.jpg" srcset="images/pic1.jpg 1x, images/pic1.jpg 2x" data-aos="fade-up">
 
-                </div>
             </div>
-            <div>
+            <div class="col-eight">
                 <p class="lead" data-aos="fade-up">
                     A Canavarros Palma Advocacia é uma empresa com mais de 20 anos de dedicação ao Direito Tributário. Nossa trajetória profissional é marcada pela busca das melhores soluções para nossos clientes, através de parcerias profissionais que valorizam cada caso
                     concreto.
