--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgProfissional" src="images/pic3.jpg" srcset="images/pic3.jpg 1x, images/pic3.jpg 2x" data-aos="fade-up">
-                    <span><strong>Advogado Tributarista</strong></span><br>
+                    <span><strong>Advogado Processual</strong></span><br>
                     <span><strong>OAB/MT 7178-B</strong></span>
                 </div>
             </div>
